// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket commodities endpoint should return success for XCU/USD with price divided by 2204.62 1`] = `
{
  "data": {
    "ask": 10.000018143716378,
    "ask_price": 10.000018143716378,
    "ask_volume": 1000000,
    "bid": 10,
    "bid_price": 10,
    "bid_volume": 1000000,
    "mid": 10.000009071858189,
    "mid_price": 10.000009071858189,
    "result": 10.000009071858189,
  },
  "result": 10.000009071858189,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 5062,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1704951160198,
  },
}
`;

exports[`websocket forex endpoint should return success 1`] = `
{
  "data": {
    "ask": 6.82543,
    "ask_price": 6.82543,
    "ask_volume": 1000000,
    "bid": 6.82427,
    "bid_price": 6.82427,
    "bid_volume": 1000000,
    "mid": 6.82485,
    "mid_price": 6.82485,
    "result": 6.82485,
  },
  "result": 6.82485,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 4052,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1704951160198,
  },
}
`;

exports[`websocket stock endpoint should return success 1`] = `
{
  "data": {
    "ask": 200.88,
    "ask_price": 200.88,
    "ask_volume": 1000000,
    "bid": 200.84,
    "bid_price": 200.84,
    "bid_volume": 1000000,
    "mid": 200.86,
    "mid_price": 200.86,
    "result": 200.86,
  },
  "result": 200.86,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 4052,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1704951160198,
  },
}
`;

exports[`websocket stock endpoint should return success with base override 1`] = `
{
  "data": {
    "ask": 461.96,
    "ask_price": 461.96,
    "ask_volume": 1000000,
    "bid": 461.92,
    "bid_price": 461.92,
    "bid_volume": 1000000,
    "mid": 461.94,
    "mid_price": 461.94,
    "result": 461.94,
  },
  "result": 461.94,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 4052,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1704951160198,
  },
}
`;

exports[`websocket stock endpoint should throw error when invalid volume is received 1`] = `
{
  "errorMessage": "Invalid bid vol NaN or ask vol 1000000 for 'INVALID.xnas:USD'",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 5062,
    "providerDataStreamEstablishedUnixMs": 1010,
  },
}
`;
